# baggins

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  DataCubes.md  README.md  bitbucket-pipelines.yml  pyproject.toml  simulation_status.md
.github/worflows/: ruff.yml
baggins/: __init__.py  env_config.py
baggins/C/include/: bound_particles.h
baggins/_backend/: CustomWarnings.py  Logging.py  __init__.py
baggins/_templates/: env_params.yml  env_params_mahti.yml
baggins/analysis/: __init__.py  analyse_ketju.py  analyse_snap.py  chaos.py  instruments.py  masks.py  obs_helper.py  orbits.py  voronoi.py
baggins/analysis/analysis_classes/: BHBinary.py  BHBinaryData.py  Brownian.py  BrownianData.py  ChildSim.py  ChildSimData.py  CoreKick.py  EccentricitySystem.py  GaussianProcesses.py  GrahamModels.py  HDF5Base.py  HMQuantitiesBinary.py  HMQuantitiesBinaryData.py  HMQuantitiesSingle.py  HMQuantitiesSingleData.py  KeplerModels.py  PQModels.py  PotentialFitter.py  QuinlanModels.py  StanModel.py  __init__.py
baggins/analysis/bayesian_classes/: ABGDensityModels.py  BHBinaryGP.py  CoreKick.py  Dehnen.py  GaussianProcesses.py  GrahamModels.py  KeplerModels.py  MergerAR.py  QuinlanModels.py  StanModel.py  TerzicModels.py  VkickApocentreGP.py  __init__.py  kick_core_gp.py
baggins/analysis/data_classes/: BHBinary.py  BHBinaryData.py  HDF5Base.py  HMQuantitiesBinary.py  HMQuantitiesBinaryData.py  HMQuantitiesSingle.py  HMQuantitiesSingleData.py  __init__.py
baggins/cosmology/: __init__.py  conversions.py  cosmology.py
baggins/docs/: conf.py  index.rst
baggins/docs/_static/: custom.css
baggins/docs/references/: _backend.rst  analysis.analyse_ketju.rst  analysis.analyse_snap.rst  analysis.analysis_classes.rst  analysis.bayesian_classes.rst  analysis.data_classes.rst  analysis.instruments.rst  analysis.masks.rst  analysis.obs_helper.rst  analysis.orbits.rst  analysis.rst  analysis.voronoi.rst  backend.rst  cosmology.rst  general.rst  initialise.rst  literature.LiteratureTables.rst  literature.bh_bulge.rst  literature.density_profiles.rst  literature.dm_bulge.rst  literature.radial_relations.rst  literature.rst  literature.simulation_fits.rst  literature.smbh_recoil.rst  literature.smbh_spins.rst  mathematics.array_operations.rst  mathematics.coordinates.rst  mathematics.geometry.rst  mathematics.rst  mathematics.statistics.rst  plotting.PlotClasses.rst  plotting.custom_cmaps.rst  plotting.general.rst  plotting.rst  plotting.specific_plots.rst  plotting.utils.rst  utils.data_handling.rst  utils.dataset_operations.rst  utils.get_cl_args.rst  utils.os_operations.rst  (+2 more)
baggins/general/: __init__.py  general.py  list_ops.py  pygad_helper.py  units.py
baggins/initialise/: GalaxyIC.py  MergerIC.py  __init__.py  galaxy_components.py
baggins/literature/: LiteratureTables.py  __init__.py  bh_bulge.py  density_profiles.py  radial_relations.py  simulation_fits.py  smbh_recoil.py  smbh_spins.py
baggins/literature/literature_data/: cappellari_13_a.txt  carlsten20.csv  harris_10_dists.txt  harris_10_struct.txt  lousto_10.txt  (+5 more)
baggins/mathematics/: __init__.py  array_operations.py  coordinates.py  geometry.py  statistics.py
baggins/plotting/: PlotClasses.py  __init__.py  custom_cmaps.py  general.py  matplotlibrc  matplotlibrc_publish  plot_utils.py  specific_plots.py
baggins/stan/: custom_rngs.stan
baggins/utils/: __init__.py  data_handling.py  dataset_operations.py  get_cl_args.py  os_operations.py  param_io.py
baggins/visualisation/: __init__.py  animation.py
code/: TODO.md  requirements.txt
code/analysis_scripts/: align_galaxy.py  analysis_submit.sh  analysis_submit_big.sh  beta_profile.py  bh_perturb_distribution.py  bh_perturb_distribution_new.py  brownian_rotate_fit_normal.py  check_merger_progress.py  compare_binaries.py  compare_orbits.py  compare_resolutions.py  deflection_angle.py  extract_HM_quantities.py  fit_dehnen.py  hardening_rates.py  has_remnant_settled.py  inertia_analysis.py  ketju_particle_count.py  make_child_datacubes.py  nasim2020.py  nasim_eccentricity.py  orbital_resolution.py  plot_recoiling_bh.py  slim_density_extractor.py  stability.py  triaxiality.py
code/baggins/: env_config.py  env_params.yml  logo.txt
code/baggins/C/: CMakeLists.txt
code/baggins/C/include/: bound_particles.cpp
code/baggins/C/src/: python_bindings.cpp
code/cm_functions/: __init__.py  cosmology.py  env_config.py  env_params.json  env_params.yml
code/figure_scripts/: bh_brownian_scatter.py  figure_config.py  figure_submit.sh  matplotlibrc  shell_motions.py
code/initialise_scripts/: bh_dm_mass.py  compare_ic_BHs.py  compare_ics.py  create_select_galaxies.sh  extract_remake.py  galaxy_gen.py  ic_kinematics.py  make_galaxy.py  merger_setup.py  perturb_bhs.py  snap_checker.py  stability.py  view_gal.py
code/utility_scripts/: convert_pickle_to_hdf5.py  print_image_info.py
code/visual_scripts/: bh_trajectory.py  hard_scatter.py  ketju_pr.py  ketju_visualisation.py  kick_trajectory.py  multiple_scatter.py  view_gal.py  visualise_system.py
paper/: Makefile  aasjournal.bst  paper.tex  ref.bib
paper/diagrams/: hm_coresersic_1.tex
paper/sections/: intro.tex  numerical.tex  results.tex  stats.tex
papers/: fix_zotero.sh  ref.bib
papers/paper-1/: Makefile  paper-1.tex  tikzlibrarybayesnet.code.tex
papers/paper-2/: Makefile  paper-2.tex
papers/paper-corekick/: Makefile  paper-corekick.tex  ref.bib
papers/paper-eccentricity/: Makefile  aasjournal.bst  paper-eccentricity.tex  ref.bib
papers/sections/: conclusions.tex  discuss.tex  intro.tex
parameters/: gadget_paramfile
parameters/parameters-analysis/: HMQcubes.py  HMQcubes.yml  HMQcubes_antti.yml  HM_comparisons.json  HM_comparisons.yml  HM_density_comparisons.yml  HM_merger_time.yml  corekick_files.yml  datacubes.py  datacubes.yml
parameters/parameters-galaxies/: README.md  compare.json  mytest.py  template.yml
parameters/parameters-mergers/: NGCa0524b_NGCa3348.py  NGCa3607-NGCa4291.py  README.md  template.yml  testsys.py
status_tables/: eccentricity-run-status.md  large-sample-status.md
(+1435 files in other folders)
