[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baggins"
version = "2024.04"
requires-python = ">=3.9"
dependencies = [
    "arviz>=0.17",
    "cmdstanpy>=1.2.0",
    "dask>=2022.4.1",
    "h5py>=3.6.0",
    "matplotlib>=3.5.1",
    "numpy>=1.22.3",
    "pandas>=1.4.2",
    "pillow>=10.2.0",
    "scipy>=1.8.0",
    "seaborn>=0.11.2",
    "tqdm",
    "pyyaml"
]
authors = [
    {name = "Alex Rawlings", email = "alexander.rawlings@helsinki.fi"},
    {name = "Matias Mannerkoski", email = "matias.mannerkoski@helsinki.fi"}
]
maintainers = [
    {name = "Alex Rawlings", email = "alexander.rawlings@helsinki.fi"}
]
description = "Bayesian Analysis of Galaxy-Galaxy Interactions in Simulations"
readme = "README.md"
license = {text = "GNU General Public License v3"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ['py39']
line-length = 88
extend-exclude = '''
(
    code/misc
    | papers/paper-eccentricity/scripts
    | parameters
)
'''
