[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baggins"
version = "2026.02"
requires-python = ">=3.10"

authors = [
    {name = "Alex Rawlings", email = "alexander.rawlings@helsinki.fi"},
    {name = "Matias Mannerkoski", email = "matias.mannerkoski@helsinki.fi"}
]
maintainers = [
    {name = "Alex Rawlings", email = "alexander.rawlings@helsinki.fi"}
]
description = "Bayesian Analysis of Galaxy-Galaxy Interactions in Simulations"
readme = "README.md"
license = {text = "GNU General Public License v3"}

dependencies = [
    "arviz>=0.17",
    "cmdstanpy>=1.2.0",
    "dask>=2022.4.1",
    "h5py>=3.6.0",
    "matplotlib>=3.5.1",
    "numpy>=1.22.3",
    "pandas>=1.4.2",
    "pillow>=10.2.0",
    "scipy>=1.8.0",
    "seaborn>=0.11.2",
    "tqdm",
    "pyyaml"
]

# Optional dependencies for specific use cases
[project.optional-dependencies]
# Development
dev = [
    "ruff==0.7.4",
    "pre-commit",
    "nb-clean",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "code/misc",
    "papers/paper-eccentricity/scripts",
    "parameters"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "F403",  # "from module import *" used
    "E203",  # "whitespace before ',', ';', or ':'"
    "E402",  # "Module level import not at top of file" (breaks paper-specific matplotlibrc import)
    "E731",  # "do not assign a lambda expression, use a def"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
